# CABINETRY

./: .cmake-format.yml  .gitignore  .pre-commit-config.yaml  CMakeLists.txt  CMakePresets.json  CMakeUserPresets.TEMPLATE.json  README.md
cmake/: FindDrv1.cmake  Summary.cmake  cabinetry_version.h.in  target.cmake
cmake/toolchain/: AMD64-Linux.cmake  AMD64-Windows.cmake
include/: BasicTypes.h
src/drivers/drv-1/: CMakeLists.txt
src/shared/: CMakeLists.txt  Data.c
